[package]
name = "directory-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-rt = "2.10.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }

serde = { version = "1.0.110", features = ["derive"] }
chrono = {version = "0.4.11", features = ["serde"]}
